ansible/roles/2048_game/files/game-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-2048"
  namespace: "game"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "2048"
